--- a/confix.glade
+++ b/confix.glade
@@ -1254,10 +1254,10 @@ repository</property>
                         <child>
                           <object class="GtkMenuItem" id="manage_groups">
                             <property name="visible">True</property>
-                            <property name="sensitive">False</property>
                             <property name="can_focus">False</property>
                             <property name="label" translatable="yes">Manage groups</property>
                             <property name="use_underline">True</property>
+                            <signal name="activate" handler="show_manage_groups" swapped="no"/>
                           </object>
                         </child>
                       </object>
